[package]
name = "sloth-pasta"
version = "0.1.0"
description = "Pasta VDF"
edition = "2018"
license = "MIT"
repository = "https://github.com/supranational/sloth-pasta"
include = [
    "/src",
    "/Cargo.toml",
]

[build-dependencies]
cc = "^1.0"

[dev-dependencies]
criterion = "0.3"
pasta_curves = "0.4.0"

[[bench]]
name = "field_asm_vs_non_asm"
harness = false
